--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     </title>
 </head>
 <body>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
+    <div>Nombre :David Andres De La Hoz Gonzalez</div>
+    <div>Semestre que cursa : Cuarto Semestre</div>
+    <div>Hobbies:</div>
+    <div>- Ir Al gym</div>
+    <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN6W5ZFVsHZ4nmed7L0ShDoXQ9MYUg1nO9UQ&s"></div>
 
 
 </body>
