--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>Hobbies:</div>
     <div>- Ir Al gym</div>
     <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN6W5ZFVsHZ4nmed7L0ShDoXQ9MYUg1nO9UQ&s"></div>
+    <div>- Jugar Videojuegos</div>
 
 
 </body>
