--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>- Ir Al gym</div>
     <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN6W5ZFVsHZ4nmed7L0ShDoXQ9MYUg1nO9UQ&s"></div>
     <div>- Jugar Videojuegos</div>
+    <div><img src="https://media.gq.com.mx/photos/5f06154185180fb067835271/16:9/w_2560%2Cc_limit/GettyImages-1125585679.jpg" ></div>
 
 
 </body>
