--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div>Semestre que cursa : Cuarto Semestre</div>
     <div>Hobbies:</div>
     <div>- Ir Al gym</div>
-    <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN6W5ZFVsHZ4nmed7L0ShDoXQ9MYUg1nO9UQ&s"></div>
+    <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN6W5ZFVsHZ4nmed7L0ShDoXQ9MYUg1nO9UQ&s" width="420" height="240"></div>
     <div>- Jugar Videojuegos</div>
-    <div><img src="https://media.gq.com.mx/photos/5f06154185180fb067835271/16:9/w_2560%2Cc_limit/GettyImages-1125585679.jpg" ></div>
+    <div><img src="https://media.gq.com.mx/photos/5f06154185180fb067835271/16:9/w_2560%2Cc_limit/GettyImages-1125585679.jpg" width="420" height="240"></div>
     <div>- Salir a Montar bicicleta</div>
-    <div></div>
+    <div><img src="https://suramericana.com/content/webp-express/webp-images/doc-root/content/uploads/sites/10/2022/06/seguros-sura-se-saludable-musculos-bicicleta.jpg.webp" width="420" height="240" ></div>
     
 
 
