--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div><img src="https://media.gq.com.mx/photos/5f06154185180fb067835271/16:9/w_2560%2Cc_limit/GettyImages-1125585679.jpg" width="420" height="240"></div>
     <div>- Salir a Montar bicicleta</div>
     <div><img src="https://suramericana.com/content/webp-express/webp-images/doc-root/content/uploads/sites/10/2022/06/seguros-sura-se-saludable-musculos-bicicleta.jpg.webp" width="420" height="240" ></div>
-    
+    <div>- Jugar Futbol </div>
 
 
 
