--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div>- Salir a Montar bicicleta</div>
     <div><img src="https://suramericana.com/content/webp-express/webp-images/doc-root/content/uploads/sites/10/2022/06/seguros-sura-se-saludable-musculos-bicicleta.jpg.webp" width="420" height="240" ></div>
     <div>- Jugar Futbol </div>
-
+    <div><img src="https://img.freepik.com/foto-gratis/vista-jugador-futbol-masculino-pelota-campo_23-2150995637.jpg" width="420" height="240"></div>
+    <div>Series Favoritas:</div>
 
 
 
