--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </title>
 </head>
 <body>
-    <div>Nombre :David Andres De La Hoz Gonzalez</div>
-    <div>Semestre que cursa : Cuarto Semestre</div>
-    <div>Hobbies:</div>
+    <div><b>Nombre :</b> Andres De La Hoz Gonzalez</div>
+    <div><b>Semestre que cursa :</b> Cuarto Semestre</div>
+    <b><div>Hobbies:</div></b>
     <div>- Ir Al gym</div>
     <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN6W5ZFVsHZ4nmed7L0ShDoXQ9MYUg1nO9UQ&s" width="420" height="240"></div>
     <div>- Jugar Videojuegos</div>
@@ -18,9 +18,9 @@
     <div><img src="https://suramericana.com/content/webp-express/webp-images/doc-root/content/uploads/sites/10/2022/06/seguros-sura-se-saludable-musculos-bicicleta.jpg.webp" width="420" height="240" ></div>
     <div>- Jugar Futbol </div>
     <div><img src="https://img.freepik.com/foto-gratis/vista-jugador-futbol-masculino-pelota-campo_23-2150995637.jpg" width="420" height="240"></div>
-    <div>Series Favoritas:</div>
+    <b><div>Series Favoritas:</div></b>
     <div>- Suits </div>
-    <div><img src="https://es.web.img2.acsta.net/pictures/14/03/28/10/18/433386.jpg" width="640" height="420"></div>
+    <div><img src="https://es.web.img2.acsta.net/pictures/14/03/28/10/18/433386.jpg" width="420" height="440"></div>
 
 
 </body>
