--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <b><div>Series Favoritas:</div></b>
     <div>- Suits </div>
     <div><img src="https://es.web.img2.acsta.net/pictures/14/03/28/10/18/433386.jpg" width="420" height="440"></div>
-
+    <div>- Cobra Kai</div>
 
 </body>
 </html>
