--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
 </head>
 <body>
-    <div><b>Nombre :</b> Andres De La Hoz Gonzalez</div>
+    <div><b>Nombre :</b> David Andres De La Hoz Gonzalez</div>
     <div><b>Semestre que cursa :</b> Cuarto Semestre</div>
     <b><div>Hobbies:</div></b>
     <div>- Ir Al gym</div>
